--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
         <div id="SimCell">
             <div id="canvas-holder"></div>
         </div>
-        
         <script src="js/sim/functions.js" type="text/javascript"></script>
+        <script src="js/sim/Input.js" type="text/javascript"></script>
         <script src="js/sim/Sim.js" type="text/javascript"></script>
-
+        <script src="js/sim/Config.js" type="text/javascript"></script>
+        <script src="js/sim/Map.js" type="text/javascript"></script>
         <script src="js/sim/Canvas.js" type="text/javascript"></script>
         <script src="js/sim/Cells.js" type="text/javascript"></script>
+        <script src="js/sim/Cell.js" type="text/javascript"></script>
         <script src="js/sim/Clock.js" type="text/javascript"></script>
         <script src="js/sim/Grid.js" type="text/javascript"></script>
         <script src="js/sim/Screen.js" type="text/javascript"></script>
         <script src="js/sim/World.js" type="text/javascript"></script>
-        <script src="js/sim/Entity.js" type="text/javascript"></script>
-        <script src="js/sim/Cell.js" type="text/javascript"></script>
+        <script src="js/sim/Tiles.js" type="text/javascript"></script>
         <script type="text/javascript">
             Sim.init();
         </script>
