Mobile Touch Enabled.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=0">
         <title></title>
         <style>
             body {
@@ -21,6 +22,7 @@
         </div>
         <script src="js/sim/functions.js" type="text/javascript"></script>
         <script src="js/sim/Input.js" type="text/javascript"></script>
+        <script src="js/sim/Touch.js" type="text/javascript"></script>
         <script src="js/sim/Sim.js" type="text/javascript"></script>
         <script src="js/sim/Config.js" type="text/javascript"></script>
         <script src="js/sim/Map.js" type="text/javascript"></script>
