--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
                 margin: 0;
                 overflow-x: hidden;
                 font-size: 0;
+                overflow-y: hidden;
+                touch-action: none;
             }
             
             #canvas-holder canvas {
@@ -21,6 +23,7 @@
             <div id="canvas-holder"></div>
         </div>
         <script src="js/sim/functions.js" type="text/javascript"></script>
+        <script src="js/sim/Mapacker.js" type="text/javascript"></script>
         <script src="js/sim/Input.js" type="text/javascript"></script>
         <script src="js/sim/Touch.js" type="text/javascript"></script>
         <script src="js/sim/Sim.js" type="text/javascript"></script>
