--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=0">
         <title></title>
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
         <style>
             body {
                 margin: 0;
@@ -11,15 +12,38 @@
                 font-size: 0;
                 overflow-y: hidden;
                 touch-action: none;
+                font-family: 'Press Start 2P';
             }
-            
+
             #canvas-holder canvas {
                 position: absolute;
+            }
+
+            #actions {
+                position: fixed;
+                bottom: 0;
+                z-index: 20;
+                width: 100%;
+            }
+
+            #actions  .btn {
+                background-color: rgba(6, 6, 232, 0.76);
+                color: white;
+                border: none;
+                border-bottom: solid 5px darkblue;
+                font-family: 'Press Start 2P';
+                padding: 10px 10px;
+                font-size: 12px;
+                margin: 8px 8px;
+                float: right;
             }
         </style>
     </head>
     <body>
         <div id="SimCell">
+            <div id="actions">
+                <button class="btn" onclick="Sim.fastTicks(1000);">+ 1000 Ticks</button>
+            </div>
             <div id="canvas-holder"></div>
         </div>
         <script src="js/sim/functions.js" type="text/javascript"></script>
