bug corrected, buffer on the way

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             }
 
             #sidebar {
+                display: none;
                 background-color: #1c1a9a;
                 position: absolute;
                 width: 320px;
