--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
                 overflow-y: hidden;
                 touch-action: none;
                 font-family: 'Press Start 2P';
+                -webkit-touch-callout: none; /* iOS Safari */
+                -webkit-user-select: none; /* Safari */
+                -khtml-user-select: none; /* Konqueror HTML */
+                -moz-user-select: none; /* Firefox */
+                -ms-user-select: none; /* Internet Explorer/Edge */
+                user-select: none; /* Non-prefixed version, currently
+                                      supported by Chrome and Opera */
             }
 
             #canvas-holder {
@@ -50,7 +57,7 @@
                 left: 5px;
                 z-index: 9999;
                 font-size: 16px;
-                width: 240px;
+                width: 280px;
                 line-height: 20px;
             }
 
