--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             #actions {
                 position: fixed;
                 bottom: 0;
-                z-index: 20;
+                z-index: 50;
                 width: 100%;
             }
 
@@ -55,7 +55,7 @@
                 color: white;
                 bottom: 5px;
                 left: 5px;
-                z-index: 9999;
+                z-index: 50;
                 font-size: 16px;
                 width: 280px;
                 line-height: 20px;
@@ -69,15 +69,47 @@
                 height: 100vh;
                 right: 0;
                 top: 0;
-                z-index: 9999;
-                -webkit-box-shadow: -5px 5px 0px 0px rgba(0,0,0,0.75);
-                -moz-box-shadow: -5px 5px 0px 0px rgba(0,0,0,0.75);
-                box-shadow: -5px 5px 0px 0px rgba(0,0,0,0.75);
+                z-index: 50;
+                -webkit-box-shadow: -5px 5px 0px 0px rgba(0,0,0,0.9);
+                -moz-box-shadow: -5px 5px 0px 0px rgba(0,0,0,0.9);
+                box-shadow: -5px 5px 0px 0px rgba(0,0,0,0.9);
+            }
+            
+            #sidebar .title {
+                font-size: 20px;
+                text-align: center;
+                color: white;
+                text-shadow: -3px 3px 0px rgba(0, 0, 0, 1);
+            }
+            
+            #sidebar #minimap {
+                margin: 20px auto;
+                width: 280px;
+            }
+
+            #loading-overlay {
+                display: none;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                z-index: 100;
+                background-color: rgba(0, 0, 0, 0.2);
+                background-image: url('img/pixel.gif');
+                color: white;
+                text-align: center;
+                vertical-align: middle;
+                cursor: wait;
+                font-size: 16px;
             }
         </style>
     </head>
     <body>
         <div id="SimCell">
+            <div id="loading-overlay">
+                <div style="display: table-cell;vertical-align: middle;">
+                    Loading...
+                </div>
+            </div>
             <div id="actions">
                 <button class="btn" onclick="Sim.fastTicks(2000);">+2K Ticks</button>
             </div>
@@ -85,7 +117,10 @@
                 Screen 0x0 Mouse 0x0
             </div>
             <div id="canvas-holder"></div>
-            <div id="sidebar"></div>
+            <div id="sidebar">
+                <h1 class="title">SimCell Alpha</h1>
+                <div id="minimap"></div>
+            </div>
         </div>
         <script src="js/sim/functions.js" type="text/javascript"></script>
         <script src="js/sim/Mapacker.js" type="text/javascript"></script>
@@ -101,6 +136,7 @@
         <script src="js/sim/Grid.js" type="text/javascript"></script>
         <script src="js/sim/Screen.js" type="text/javascript"></script>
         <script src="js/sim/World.js" type="text/javascript"></script>
+        <script src="js/sim/Minimap.js" type="text/javascript"></script>
         <script src="js/sim/Tiles.js" type="text/javascript"></script>
         <script type="text/javascript">
 
