Cells history added

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <script src="js/sim/World.js" type="text/javascript"></script>
         <script src="js/sim/Minimap.js" type="text/javascript"></script>
         <script src="js/sim/Tiles.js" type="text/javascript"></script>
+        <script src="js/sim/History.js" type="text/javascript"></script>
         <script type="text/javascript">
 
                     let tempData = unpack(WorldMap.data);
