Decreased sidebar width, normalized buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a onclick="Sim.load();">
+                                    <a onclick="Interface.goTo('import');">
                                         Load
                                     </a>
                                 </li>
@@ -107,7 +107,7 @@
                                                                 <span class="img-holder">
                                                                     <img src="img/new-game.gif" class="img-responsive"/>
                                                                 </span>
-                                                                <span>Create a new simulation</span>
+                                                                <span>Start a new simulation</span>
                                                             </a>
                                                         </div>
                                                         <div class="col-xs-6 col-sm-4">
