improvements on interface, now working on tick optimization

--- a/index.html
+++ b/index.html
@@ -38,18 +38,6 @@
                             </ul>
                         </li>
                         <li>
-                            <a>
-                                Map
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a>
-                                        Properties
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
                             <a onclick="Sim.HistoryWindow.show();">
                                 Data/chart
                             </a>
@@ -149,7 +137,8 @@
                 <div id="screen-game" class="screen screen-game">
                     <!--screen coords-->
                     <div id="coords">
-                        Screen 0x0 Mouse 0x0
+                        Screen 0x0<br />
+                        Mouse 0x0
                     </div>
                     <!--screen coords-->
 
