--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=0">
         <title></title>
-        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-        <link href="css/sim.css" rel="stylesheet">
-        <link href="css/lib/bootstrap.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
+        <link href="css/sim.css" rel="stylesheet" />
+        <link href="css/lib/bootstrap.css" rel="stylesheet" />
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113019854-1"></script>
+        <script type="text/javascript">
+            if(window.location.hostname !== 'localhost') {
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', 'UA-113019854-1');
+            }
+        </script>
+
     </head>
     <body>
         <div id="SimCell">
