--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=0">
-        <title></title>
+        <title>SimCell</title>
+        <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+        <meta name="theme-color" content="#1c1a9a" />
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
         <link href="css/sim.css" rel="stylesheet" />
         <link href="css/lib/bootstrap.css" rel="stylesheet" />
@@ -291,9 +293,6 @@
         <!--new lib for screen management-->
         <!--TODO could be replaced by a static slider without animations-->
         <script src="js/lib/Interface.js" type="text/javascript"></script>
-
-        <!--charts-->
-        <script src="js/lib/Charts8.js" type="text/javascript"></script>
 
         <!--beloved Perlin noise, many thanks to Ken Perlin and Stefan Gustavson-->
         <script src="js/lib/perlin.js" type="text/javascript"></script>
