added asdw to help screen

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                                     <div>
                                                         <div>
                                                             <h4>
-                                                                Use keyboard keys to move around
+                                                                Use keyboard keys or arrows to move around
                                                             </h4>
                                                         </div>
                                                         <div>
@@ -185,12 +185,12 @@
                                                                 <div class="col-xs-12">
                                                                     <table align="center">
                                                                         <tr>
-                                                                            <td colspan="3"><span class="btn keyboard">&#8593;</span></td>
+                                                                            <td colspan="3"><span class="btn keyboard">W</span></td>
                                                                         </tr>
                                                                         <tr>
-                                                                            <td><span class="btn keyboard"><span style="transform: rotate(-90deg);display: block;">&#8593;</span></span></td>
-                                                                            <td><span class="btn keyboard">&#8595;</span></td>
-                                                                            <td><span class="btn keyboard"><span style="transform: rotate(90deg);display: block;">&#8593;</span></span></td>
+                                                                            <td><span class="btn keyboard"><span style="display: block;">A</span></span></td>
+                                                                            <td><span class="btn keyboard">S</span></td>
+                                                                            <td><span class="btn keyboard"><span style="display: block;">D</span></span></td>
                                                                         </tr>
                                                                     </table>
                                                                 </div>
