added focus on species

--- a/index.html
+++ b/index.html
@@ -546,6 +546,8 @@
 
         <!--user interective actions supposedly-->
         <script src="js/sim/Actions.js" type="text/javascript"></script>
+        <script src="js/sim/Interactions.js" type="text/javascript"></script>
+        <script src="js/sim/Shortcuts.js" type="text/javascript"></script>
 
         <script src="js/sim/History.js" type="text/javascript"></script>
         <script src="js/sim/HistoryWindow.js" type="text/javascript"></script>
